# easytier-pro

./: .gitignore  AGENTS.md  LICENSE  README.md  TAURI_REWRITE_SPEC.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: download-easycore.sh  generate-version.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  update.rs  version.rs
src/components/: AppShell.tsx
src/pages/: Connections.tsx  Nodes.tsx  Settings.tsx
