[package]
name = "easytier-pro"
version = "0.1.0"
description = "EasyTier 网络管家 — 组网 VPN 桌面管理工具"
authors = ["chaogeek"]
edition = "2021"

[lib]
name = "easytier_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 请求（更新检查、下载）
reqwest = { version = "0.12", features = ["json", "native-tls", "blocking"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 版本号比较
semver = "1"

# 错误处理
anyhow = "1"
